# jordan

./: .gitignore  DATABASE.md  DATBASE.md  README.md  companies.csv  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
crawler/: .gitignore  README.md  enrich_company.py  enrich_contact.py  enrich_domain.py  fetch_website_logo.py  pyproject.toml
crawler/enrichers/: __init__.py  base.py  company.py  contact.py
crawler/src/: __init__.py  domains.py  enrich_company.py  enrich_contact.py  enrich_domain.py  export_contact_email_candidates.py  import_companies.py  import_email_hippo_csv.py  result.py  search_contacts.py
crawler/src/adapters/: openai.py
crawler/src/enrichers/: __init__.py  base.py  domain.py
crawler/src/enrichers/company/: __init__.py  common.py  description.py  enricher.py  industry.py  logo.py
crawler/src/enrichers/contact/: __init__.py  enricher.py
crawler/src/tests/: conftest.py  test_contact_enricher.py  test_enrich_contact.py  test_enrich_contact_runner.py  test_enrichers_company.py  test_import_companies.py
crawler/tests/: test_contact_enricher.py  test_enrich_contact.py  test_enrich_contact_runner.py  test_enrichers_company.py
src/: collect.ts  email-hippo-csv.ts  guessWebsiteUrl.ts  index.ts  score.ts  showDomain.ts
src/adapters/: csvLeadExporter.ts  dnsMxEmailVerifier.ts  emailHippoApiEmailVerifier.ts  emailHippoCsvEmailVerifier.ts  fetchHelpers.ts  llmContactFinder.ts  llmEmailPatternDetector.ts  (+1 more)
web/: package-lock.json  package.json  tailwind.config.ts
web2/: .eslintrc.json  next.config.mjs  tsconfig.json
(+76 files in other folders)
